[package]
name = "null"
version = "0.1.0"
authors = ["sakuraya <xxxxxx@xxxxx.xxx>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.7", features = ["json"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
tokio = { version = "0.2.22", features = ["full"] }
url = "2.1.1"
error-chain = "0.12.4"
